arg: Warn on lossy conversion from (u)int64

Previously, a conversion from 64-bit integer that could not be stored
exactly in a double, would trip an assertion in debug mode SpiderMonkey.
This new behaviour in SpiderMonkey 38 would cause code like
"GLib.MAXINT64" to crash.

Instead, we check for that situation, log a warning for the developer,
and proceed with the lossy value.

https://bugzilla.gnome.org/show_bug.cgi?id=778705